--- a/src/app/Components/basic/about-us/about-us.component.html
+++ b/src/app/Components/basic/about-us/about-us.component.html
@@ -31,7 +31,7 @@
     </script>
 </head>
   
-<body style="overflow: hidden;">
+<body style="overflow: hidden;margin: 0px;padding: 0px;">
   
   
     <section class="background firstsection">
