--- a/src/app/Components/productModule/ordercreator/ordercreator.component.html
+++ b/src/app/Components/productModule/ordercreator/ordercreator.component.html
@@ -1,17 +1,17 @@
 
 <body style="background-color: rgb(197, 156, 170);margin-bottom:100px ;">
-    <h1 style="text-align:center ;font-size:40px ;padding-top: 20px;"><b>Make Your Order</b></h1>
-    <h1 style="margin-left: 20px;"><b >Select Category : </b><select [(ngModel)]="SelectedCatogryID">
+    <!-- <h1 style="text-align:center ;font-size:40px ;padding-top: 20px;"><b>Your Order</b></h1> -->
+    <!-- <h1 style="margin-left: 20px;"><b >Select Category : </b><select [(ngModel)]="SelectedCatogryID">
         
         <option *ngFor="let item of Catogrylist" [ngValue]="item.id">{{item.name}}</option>
         
     </select>
-    </h1>
-    <div ><app-products [receivedcatogryid]="SelectedCatogryID" (onclickonAddcart)="UpdateADDtocartfunc($event)">
+    </h1> -->
+    <!-- <div ><app-products [receivedcatogryid]="SelectedCatogryID" (onclickonAddcart)="UpdateADDtocartfunc($event)">
         
         </app-products>
-    </div>
-    <h1 style="text-align:center ;font-size:40px ;padding-top: 40px;"><b>Make Your Order</b></h1>
+    </div> -->
+    <h1 style="text-align:center ;font-size:40px ;padding-top: 40px;"><b> Your Order </b></h1>
     
     <table class="table" id="carttable" style="border:solid 3px black ;">
         <tbody>
@@ -23,13 +23,13 @@
         
         
         <tr  *ngFor="let item of cartarray" >
-            <td>{{item.ProductID}}</td>
-            <td>{{item.ProductName}}</td>
+            <td>{{item.productID}}</td>
+            <td>{{item.productName}}</td>
             
-            <td>{{item.Unitprice|currency:'EGY'}}</td>
+            <td>{{item.unitprice|currency:'EGY'}}</td>
             <td>{{item.productcount}}</td>
             
-            <button class="btn" (click)="Removecart(item.ProductID,cartarray)"  id="btn">Remove</button>
+            <button class="btn" (click)="Removecart(item.productID)"  id="btn">Remove</button>
             
         </tr>
     
