--- a/src/app/Components/authen/login/login.component.scss
+++ b/src/app/Components/authen/login/login.component.scss
@@ -1,6 +1,4 @@
-form {
-    border: 3px solid #f1f1f1;
-  }
+
   
   /* Full-width inputs */
   input[type=text], input[type=password] {
@@ -68,3 +66,6 @@ form {
       width: 100%;
     }
   }
+  input{
+    background-color: rgb(197, 156, 170);
+}
